@@ -6,10 +6,14 @@ HISTORY
 
   ++ New features:
 
-  2016-07-xx: Dirk Ziegelmeier:
+  2016-07-27: Simon Goldschmidt
+  * opt.h, timeouts.h/.c: added LWIP_TIMERS_CUSTOM to override the default
+    implementation of timeouts
+
+  2016-07-xx: Dirk Ziegelmeier
   * Large overhaul of doxygen documentation
 
-  2016-04-05: Simon Goldschmidt:
+  2016-04-05: Simon Goldschmidt
   * timers.h/.c: prepare for overriding current timeout implementation: all
     stack-internal caclic timers are avaliable in the lwip_cyclic_timers array
 
